deploy/k3s/odysseus/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odysseus
  labels:
    app.kubernetes.io/part-of: odysseus
