deploy/k3s/odysseus/manifests/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odysseus
  namespace: odysseus
spec:
  ingressClassName: traefik
  rules:
    - host: odysseus.192.168.1.8.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odysseus
                port:
                  name: http
